--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-monitor"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
 description = "A terminal system monitor built with Rust and Ratatui"
 license = "MIT"
@@ -10,3 +10,4 @@ repository = "https://github.com/KamilErdogmus/Rust-Monitor"
 ratatui = "0.30"
 crossterm = "0.29"
 sysinfo = "0.38.2"
+nvml-wrapper = "0.12.0"
